# reqres_api

./: .env_example  .gitignore  README.md  config.py  pyproject.toml
framework/: data.py  demoqa_with_env.py
schemas/: schemas.py
tests/: conftest.py  test_demoqa.py  test_reqres_in.py
tests/ui/: test_for_demoshop.py
utils/: base_session.py
